2017-08-14  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOneMNGImage): Deal with invalid (too large)
	length of MNG chunks (bug #446).

2017-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (ReadPNMImage): Verify that sufficient file data
	exists to support what the file header requires before allocating
	memory for it.  Fixes problem reported by Agostino Sarubbo via
	email on Wed, 12 Jul 2017 and reported yet again via SourceForge
	bug #441 "memory allocation failure in MagickRealloc".

2017-08-20  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c: Fix SourceForge bug #433 "memory leak in
	ReadMATImage".  Credit for discovering and reporting the problem
	is "ADLab of Venustech".

	* coders/sun.c (ReadSUNImage): Fix failure to allocate memory due
	to inadequate file data to support claimed image width and height.
	First notified by email from Agostino Sarubbo on 14 Jul 2017 and
	then again as SourceForge bug #442 "memory allocation failure in
	magickmalloc".

2017-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (GetStyleTokens): Fix SourceForge bugs 434 "heap
	buffer overflow in GetStyleTokens", 435 "null pointer
	dereference_in_SVGStartElement", and 436 "heap buffer overflow in
	GetStyleTokens" which all originated from a heap buffer overflow
	in GetStyleStokens(), or inconsistent initialization.  Now the
	implementation truncates parsing for poorly-formed input (to avoid
	buffer overflow) while still correctly parsing well-formed input.
	The reproducers and problem reports are attributed to "ADLab of
	Venustech".

2017-08-14  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Fixed double-free after
	reading a malformed JNG (Issue #438).

2017-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcd.c (ReadPCDImage): Fix memory leak on return path due
	to corrupted header.  Patch included in email on 14 Aug 2017 by