@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2017-08-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/jnx.c (ReadJNXImage): Fix denial of service (DOS) issue
+in ReadJNXImage() whereby large amounts of CPU and memory
+resources may be consumed although the file itself does not
+support the requests.  Problem was reported via email on Wed Aug
+23 2017 by Xiaohei and Wangchu from Alibaba Security Team.</li>
+</ul>
+</blockquote>
 <p>2017-08-14  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
